fix(@vtmn/css): the thumb of the Toggle component doesn't have the right color in dark mode

--- a/packages/sources/css/src/components/selection-controls/toggle/src/index.css
+++ b/packages/sources/css/src/components/selection-controls/toggle/src/index.css
@@ -93,7 +93,7 @@
   inline-size: rem(24px);
   inset-inline-start: rem(4px);
   inset-block-start: rem(4px);
-  background-color: var(--vtmn-semantic-color_content-primary-reversed);
+  background-color: var(--vtmn-base-color_white);
   transition: var(--vtmn-transition_focus-visible), transform 0.2s ease-out,
     background-color 0.2s ease-out;
   border-radius: 50%;
